@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

abstract class ResolveCommand
abstract class Approve
class ApproveCommand
class MassApprove
class RejectCommand
class MassReject

ResolveCommand <|-- Approve
ResolveCommand <|-- Reject
Approve <|-- ApproveCommand
Approve <|-- MassApprove
Reject <|-- RejectCommand
Reject <|== MassReject
@enduml
